<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.ForgotActivity">


    <TextView
        android:id="@+id/txtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/enter_the_received_otp_below"
        android:textColor="@android:color/white"
        android:textSize="17sp" />


    <EditText
        android:id="@+id/etMobileForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtText"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobileForget"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:hint="@string/passwrd"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etCnfrmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:hint="@string/confirm_passwrd"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCnfrmPass"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>