<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/rlRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <TextView
                android:id="@+id/tvMainLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="42dp"
                android:layout_below="@id/toolbar"
                android:fontFamily="@font/poppins"
                android:text="Soni Meals"
                android:textColor="@android:color/black"
                android:textSize="45sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tvMainLogo"
                android:background="@android:color/black"
                android:layout_marginHorizontal="75dp"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view1"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:background="@color/tv_back"
                android:fontFamily="@font/roboto"
                android:hint="@string/name_min_3_charracters"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etName"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                android:background="@color/tv_back"
                android:fontFamily="@font/roboto"
                android:hint="@string/email_adress"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etEmail"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                android:background="@color/tv_back"
                android:fontFamily="@font/roboto"
                android:hint="@string/mobile_number_10_digits"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etMobile"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                android:background="@color/tv_back"
                android:fontFamily="@font/roboto"
                android:hint="@string/delivery_adrress"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etDelivery"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                android:background="@color/tv_back"
                android:fontFamily="@font/roboto"
                android:hint="@string/passwrd"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etCnfrmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPass"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                android:background="@color/tv_back"
                android:fontFamily="@font/roboto"
                android:hint="@string/confirm_passwrd"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etCnfrmPass"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/poppins"
                android:text="@string/register"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>

